Replace all EDJS abbreviations with full name 'L'École des jeunes spectateurs'
- Updated all instances of 'EDJS' and 'edjs' to 'L'École des jeunes spectateurs' across all HTML pages
- Preserved technical file paths (logo files, favicon files, image directories)
- Preserved email addresses (info@edjs.ma) and venue names (Théâtre EDJS)
- Updated meta tags, descriptions, copyright notices, and content text
- Affects all 20+ pages including spectacle details, main pages, and utility pages
- Website now uses full organization name instead of abbreviation throughout

--- a/404.html
+++ b/404.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>
-    Page non trouvée - École des Jeunes Spectateurs | EDJS
+    Page non trouvée - École des Jeunes Spectateurs | L'École des jeunes spectateurs
   </title>
   <meta name="author" content="École des Jeunes Spectateurs">
   <meta name="description" content="Page non trouvée - École des Jeunes Spectateurs">
-  <meta name="keywords" content="École des Jeunes Spectateurs, EDJS, erreur 404">
+  <meta name="keywords" content="École des Jeunes Spectateurs, L'École des jeunes spectateurs, erreur 404">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- EDJS Favicon -->
+  <!-- L'École des jeunes spectateurs Favicon -->
   <link rel="icon" type="image/png" href="assets/img/4x/edjs favicon_1@4x.png">
   <link rel="shortcut icon" href="assets/img/4x/edjs favicon_1@4x.png" type="image/png">
   <link rel="apple-touch-icon" href="assets/img/4x/edjs favicon_1@4x.png">
