--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Blog - École des Jeunes Spectateurs | EDJS</title>
+  <title>Blog - École des Jeunes Spectateurs | L'École des jeunes spectateurs</title>
   <meta name="author" content="École des Jeunes Spectateurs">
   <meta name="description" content="Actualités et articles sur les spectacles théâtraux et culturels de l'École des Jeunes Spectateurs au Maroc.">
   <meta name="keywords" content="blog, actualités, spectacles, théâtre, enfants, culture, École des Jeunes Spectateurs">
@@ -53,13 +53,13 @@
 
   <style>
     :root {
-      --edjs-primary: #70c05b;
-      --edjs-secondary: #4A2559;
-      --edjs-accent: #D18109;
+      --L'École des jeunes spectateurs-primary: #70c05b;
+      --L'École des jeunes spectateurs-secondary: #4A2559;
+      --L'École des jeunes spectateurs-accent: #D18109;
     }
 
     .blog-hero {
-      background: linear-gradient(135deg, var(--edjs-primary) 0%, var(--edjs-secondary) 100%);
+      background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-primary) 0%, var(--L'École des jeunes spectateurs-secondary) 100%);
       padding: 120px 0 80px;
       position: relative;
       overflow: hidden;
@@ -108,7 +108,7 @@
       background: #f8f9fa;
     }
 
-    .edjs-blog-card {
+    .L'École des jeunes spectateurs-blog-card {
       background: white;
       border-radius: 20px;
       overflow: hidden;
@@ -118,7 +118,7 @@
       border: 1px solid rgba(112, 22, 126, 0.1);
     }
 
-    .edjs-blog-card:hover {
+    .L'École des jeunes spectateurs-blog-card:hover {
       transform: translateY(-10px);
       box-shadow: 0 20px 60px rgba(112, 22, 126, 0.15);
     }
@@ -136,7 +136,7 @@
       transition: transform 0.5s ease;
     }
 
-    .edjs-blog-card:hover .blog-card-image img {
+    .L'École des jeunes spectateurs-blog-card:hover .blog-card-image img {
       transform: scale(1.1);
     }
 
@@ -144,7 +144,7 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      background: linear-gradient(135deg, var(--edjs-purple), var(--edjs-primary));
+      background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-purple), var(--L'École des jeunes spectateurs-primary));
       color: white;
       padding: 10px 18px;
       border-radius: 30px;
@@ -159,7 +159,7 @@
 
     .blog-category {
       display: inline-block;
-      background: linear-gradient(135deg, var(--edjs-accent), #ff6b35);
+      background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-accent), #ff6b35);
       color: white;
       padding: 8px 20px;
       border-radius: 25px;
@@ -186,7 +186,7 @@
     }
 
     .blog-card-title a:hover {
-      color: var(--edjs-purple);
+      color: var(--L'École des jeunes spectateurs-purple);
     }
 
     .blog-excerpt {
@@ -199,7 +199,7 @@
     .blog-read-more {
       display: inline-flex;
       align-items: center;
-      background: linear-gradient(135deg, var(--edjs-purple), var(--edjs-primary));
+      background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-purple), var(--L'École des jeunes spectateurs-primary));
       color: white;
       padding: 12px 25px;
       border-radius: 30px;
@@ -238,7 +238,7 @@
       font-size: 1.4rem;
       font-weight: 700;
       margin-bottom: 25px;
-      color: var(--edjs-purple);
+      color: var(--L'École des jeunes spectateurs-purple);
       position: relative;
       padding-bottom: 15px;
     }
@@ -250,7 +250,7 @@
       left: 0;
       width: 50px;
       height: 3px;
-      background: linear-gradient(135deg, var(--edjs-purple), var(--edjs-primary));
+      background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-purple), var(--L'École des jeunes spectateurs-primary));
       border-radius: 2px;
     }
 
@@ -303,7 +303,7 @@
     }
 
     .recent-post-content h6 a:hover {
-      color: var(--edjs-purple);
+      color: var(--L'École des jeunes spectateurs-purple);
     }
 
     .recent-post-date {
@@ -329,7 +329,7 @@
     }
 
     .category-item:hover {
-      background: linear-gradient(135deg, var(--edjs-purple), var(--edjs-primary));
+      background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-purple), var(--L'École des jeunes spectateurs-primary));
       transform: translateX(5px);
       box-shadow: 0 4px 15px rgba(112, 22, 126, 0.2);
     }
@@ -346,7 +346,7 @@
     }
 
     .category-count {
-      background: var(--edjs-accent);
+      background: var(--L'École des jeunes spectateurs-accent);
       color: white;
       padding: 6px 12px;
       border-radius: 20px;
@@ -357,7 +357,7 @@
 
     .category-item:hover .category-count {
       background: white;
-      color: var(--edjs-purple);
+      color: var(--L'École des jeunes spectateurs-purple);
     }
 
     /* Responsive Design */
@@ -480,7 +480,7 @@
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
     <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
-      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="L'École des jeunes spectateurs Background">
     </div>
     <div class="container">
       <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
@@ -507,7 +507,7 @@
           <div class="col-lg-8">
             
             <!-- Blog Post 1 -->
-            <article class="edjs-blog-card">
+            <article class="L'École des jeunes spectateurs-blog-card">
               <div class="blog-card-image">
                 <img src="assets/img/Casse-Noisette_Web_007.jpg" alt="Casse-Noisette répétitions">
                 <div class="blog-date-badge">
@@ -529,7 +529,7 @@
             </article>
 
             <!-- Blog Post 2 -->
-            <article class="edjs-blog-card">
+            <article class="L'École des jeunes spectateurs-blog-card">
               <div class="blog-card-image">
                 <img src="assets/img/Le_Petit_Prince_Web_030.jpg" alt="Le Petit Prince">
                 <div class="blog-date-badge">
@@ -551,7 +551,7 @@
             </article>
 
             <!-- Blog Post 3 -->
-            <article class="edjs-blog-card">
+            <article class="L'École des jeunes spectateurs-blog-card">
               <div class="blog-card-image">
                 <img src="assets/img/Tara_Sur_La_Lune_Web_024.jpg" alt="Tara sur la Lune">
                 <div class="blog-date-badge">
@@ -573,7 +573,7 @@
             </article>
 
             <!-- Blog Post 4 -->
-            <article class="edjs-blog-card">
+            <article class="L'École des jeunes spectateurs-blog-card">
               <div class="blog-card-image">
                 <img src="assets/img/Les_Fourberies_De_Scapin_Web_012.jpg" alt="Partenariats écoles">
                 <div class="blog-date-badge">
@@ -586,7 +586,7 @@
                   <a href="blog-details">Bilan 2024 : Plus de 50 écoles partenaires</a>
                 </h2>
                 <p class="blog-excerpt">
-                  Cette année 2024 a été exceptionnelle pour EDJS. Nous avons établi des partenariats avec plus de 50 établissements scolaires à travers le Maroc, touchant plus de 15,000 jeunes spectateurs...
+                  Cette année 2024 a été exceptionnelle pour L'École des jeunes spectateurs. Nous avons établi des partenariats avec plus de 50 établissements scolaires à travers le Maroc, touchant plus de 15,000 jeunes spectateurs...
                 </p>
                 <a href="blog-details" class="blog-read-more">
                   Lire la suite <i class="fas fa-arrow-right"></i>
@@ -595,7 +595,7 @@
             </article>
 
             <!-- Blog Post 5 -->
-            <article class="edjs-blog-card">
+            <article class="L'École des jeunes spectateurs-blog-card">
               <div class="blog-card-image">
                 <img src="assets/img/Les_Trois_Brigands_Web_026.jpg" alt="Les Trois Brigands">
                 <div class="blog-date-badge">
@@ -702,7 +702,7 @@
             </div>
 
             <!-- Newsletter -->
-            <div class="blog-sidebar" style="background: linear-gradient(135deg, var(--edjs-primary), var(--edjs-secondary)); color: white;">
+            <div class="blog-sidebar" style="background: linear-gradient(135deg, var(--L'École des jeunes spectateurs-primary), var(--L'École des jeunes spectateurs-secondary)); color: white;">
               <h3 class="sidebar-title" style="color: white; border-color: rgba(255,255,255,0.3);">Newsletter</h3>
               <p style="opacity: 0.9; margin-bottom: 20px;">Restez informé de nos dernières actualités et spectacles</p>
               <form class="newsletter-form">
@@ -731,11 +731,11 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-footer__logo-link">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
-                EDJS propose des spectacles théâtraux éducatifs et
+                L'École des jeunes spectateurs propose des spectacles théâtraux éducatifs et
                 des ateliers créatifs pour enfants.
               </p>
               <div class="icon-call justify-content-center justify-content-md-start pt-10 mb-10">
@@ -808,7 +808,7 @@
           <div class="col-md-auto">
             <p class="vs-footer__copyright mb-0" style="color: #999999;">
               Copyright © <span id="currentYear"></span>
-              <a href="/">EDJS</a>. Tous droits réservés.
+              <a href="/">L'École des jeunes spectateurs</a>. Tous droits réservés.
             </p>
           </div>
           <div class="col-md-auto">
