--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>
-    EDJS - Contact | Plateforme Culturelle pour Écoles et Familles au Maroc
+    L'École des jeunes spectateurs - Contact | Plateforme Culturelle pour Écoles et Familles au Maroc
   </title>
-  <meta name="author" content="EDJS">
-  <meta name="description" content="Contactez EDJS pour réserver des spectacles culturels pour votre école, association ou famille. Devis personnalisés et réservations en ligne disponibles.">
-  <meta name="keywords" content="EDJS contact, réservation spectacles, devis écoles, contact plateforme culturelle Maroc">
+  <meta name="author" content="L'École des jeunes spectateurs">
+  <meta name="description" content="Contactez L'École des jeunes spectateurs pour réserver des spectacles culturels pour votre école, association ou famille. Devis personnalisés et réservations en ligne disponibles.">
+  <meta name="keywords" content="L'École des jeunes spectateurs contact, réservation spectacles, devis écoles, contact plateforme culturelle Maroc">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -222,7 +222,7 @@
               <a href="tel:+212522123456" class="sidemenu-link">+212 522 123 456</a>
             </li>
             <li>
-              <a href="mailto:contact@edjs.ma" class="sidemenu-link">contact@edjs.ma</a>
+              <a href="mailto:contact@L'École des jeunes spectateurs.ma" class="sidemenu-link">contact@L'École des jeunes spectateurs.ma</a>
             </li>
             <li>
               <a href="/">Casablanca, Maroc</a>
@@ -235,7 +235,7 @@
           <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
           <a href="https://behance.com/"><i class="fab fa-behance"></i></a>
         </div>
-        <p class="sidemenu-text sidemenu-text--footer text-center mb-0">Copyright 2025 <a class="vs-theme-color" href="/">EDJS</a>.
+        <p class="sidemenu-text sidemenu-text--footer text-center mb-0">Copyright 2025 <a class="vs-theme-color" href="/">L'École des jeunes spectateurs</a>.
           Tous droits réservés.
         </p>
       </div>
@@ -369,7 +369,7 @@
   <div class="sidemenu-wrapper">
     <div class="sidemenu-content">
       <div class="sidemenu-logo sidemenu-item">
-        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 50px; filter: brightness(0) invert(1);"></a>
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 50px; filter: brightness(0) invert(1);"></a>
         <button class="closeButton sideMenuCls">X</button>
       </div>
       <hr class="sidemenu-hr sidemenu-item">
@@ -385,7 +385,7 @@
                 <a href="tel:+212522123456" class="sidemenu-link">+212 522 123 456</a>
               </li>
               <li class="sidemenu-item">
-                <a href="mailto:contact@edjs.ma" class="sidemenu-link">contact@edjs.ma</a>
+                <a href="mailto:contact@L'École des jeunes spectateurs.ma" class="sidemenu-link">contact@L'École des jeunes spectateurs.ma</a>
               </li>
               <li class="sidemenu-item">
                 <a href="/">Casablanca, Maroc</a>
@@ -529,7 +529,7 @@
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
     <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
-      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="L'École des jeunes spectateurs Background">
     </div>
     <div class="container">
       <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
@@ -579,7 +579,7 @@
             </div>
             <h4 style="color: #333; margin-bottom: 15px;">Email</h4>
             <p style="color: #666; margin-bottom: 10px;">Envoyez-nous un email</p>
-            <a href="mailto:contact@edjs.ma" style="color: #7e8a01; font-weight: 600; text-decoration: none; font-size: 18px;">contact@edjs.ma</a>
+            <a href="mailto:contact@L'École des jeunes spectateurs.ma" style="color: #7e8a01; font-weight: 600; text-decoration: none; font-size: 18px;">contact@L'École des jeunes spectateurs.ma</a>
           </div>
         </div>
         
@@ -633,13 +633,13 @@
             <div class="social-contact mt-4">
               <h5 style="color: #333; margin-bottom: 20px;">Suivez-nous</h5>
               <div class="social-links">
-                <a href="https://www.facebook.com/edjs.maroc" style="display: inline-block; width: 45px; height: 45px; background: #3b5998; border-radius: 50%; text-align: center; line-height: 45px; color: white; text-decoration: none; margin-right: 10px; transition: transform 0.3s ease;">
+                <a href="https://www.facebook.com/L'École des jeunes spectateurs.maroc" style="display: inline-block; width: 45px; height: 45px; background: #3b5998; border-radius: 50%; text-align: center; line-height: 45px; color: white; text-decoration: none; margin-right: 10px; transition: transform 0.3s ease;">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="https://www.instagram.com/edjs.maroc" style="display: inline-block; width: 45px; height: 45px; background: #e4405f; border-radius: 50%; text-align: center; line-height: 45px; color: white; text-decoration: none; margin-right: 10px; transition: transform 0.3s ease;">
+                <a href="https://www.instagram.com/L'École des jeunes spectateurs.maroc" style="display: inline-block; width: 45px; height: 45px; background: #e4405f; border-radius: 50%; text-align: center; line-height: 45px; color: white; text-decoration: none; margin-right: 10px; transition: transform 0.3s ease;">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.youtube.com/c/edjs" style="display: inline-block; width: 45px; height: 45px; background: #ff0000; border-radius: 50%; text-align: center; line-height: 45px; color: white; text-decoration: none; margin-right: 10px; transition: transform 0.3s ease;">
+                <a href="https://www.youtube.com/c/L'École des jeunes spectateurs" style="display: inline-block; width: 45px; height: 45px; background: #ff0000; border-radius: 50%; text-align: center; line-height: 45px; color: white; text-decoration: none; margin-right: 10px; transition: transform 0.3s ease;">
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
@@ -752,7 +752,7 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-footer__logo-link">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start">
@@ -767,9 +767,9 @@
               </div>
               <div class="social-style social-style--version2 w-100 justify-content-center justify-content-md-start pt-25">
                 <span class="social-style__label">Suivez-nous :</span>
-                <a href="https://www.facebook.com/edjs.maroc"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/edjs.maroc"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.youtube.com/c/edjs"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/L'École des jeunes spectateurs.maroc"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/L'École des jeunes spectateurs.maroc"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/c/L'École des jeunes spectateurs"><i class="fab fa-youtube"></i></a>
               </div>
             </div>
           </div>
@@ -795,35 +795,35 @@
           </div>
           <div class="col-lg-4 col-md-6 wow animate__fadeInUp" data-wow-delay="0.45s">
             <div class="vs-footer__widget">
-              <h3 class="vs-footer__title">Galerie EDJS</h3>
+              <h3 class="vs-footer__title">Galerie L'École des jeunes spectateurs</h3>
               <div class="sidebar-gallery">
                 <div class="gallery-thumb">
-                  <img src="assets/edjs img/Casse-Noisette_Web_007.webp" alt="EDJS Spectacle" class="w-100">
+                  <img src="assets/edjs img/Casse-Noisette_Web_007.webp" alt="L'École des jeunes spectateurs Spectacle" class="w-100">
                   <a href="assets/edjs img/Casse-Noisette_Web_007.webp" class="popup-image gal-btn"><i
                                         class="fal fa-plus"></i></a>
                 </div>
                 <div class="gallery-thumb">
-                  <img src="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" alt="EDJS Spectacle" class="w-100">
+                  <img src="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" alt="L'École des jeunes spectateurs Spectacle" class="w-100">
                   <a href="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" class="popup-image gal-btn"><i
                                         class="fal fa-plus"></i></a>
                 </div>
                 <div class="gallery-thumb">
-                  <img src="assets/edjs img/Casse-Noisette_Web_017-1024x683.webp" alt="EDJS Spectacle" class="w-100">
+                  <img src="assets/edjs img/Casse-Noisette_Web_017-1024x683.webp" alt="L'École des jeunes spectateurs Spectacle" class="w-100">
                   <a href="assets/edjs img/Casse-Noisette_Web_017-1024x683.webp" class="popup-image gal-btn"><i
                                         class="fal fa-plus"></i></a>
                 </div>
                 <div class="gallery-thumb">
-                  <img src="assets/edjs img/Casse-Noisette_Web_035.webp" alt="EDJS Spectacle" class="w-100">
+                  <img src="assets/edjs img/Casse-Noisette_Web_035.webp" alt="L'École des jeunes spectateurs Spectacle" class="w-100">
                   <a href="assets/edjs img/Casse-Noisette_Web_035.webp" class="popup-image gal-btn"><i
                                         class="fal fa-plus"></i></a>
                 </div>
                 <div class="gallery-thumb">
-                  <img src="assets/edjs img/Casse-Noisette_Web_007.webp" alt="EDJS Spectacle" class="w-100">
+                  <img src="assets/edjs img/Casse-Noisette_Web_007.webp" alt="L'École des jeunes spectateurs Spectacle" class="w-100">
                   <a href="assets/edjs img/Casse-Noisette_Web_007.webp" class="popup-image gal-btn"><i
                                         class="fal fa-plus"></i></a>
                 </div>
                 <div class="gallery-thumb">
-                  <img src="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" alt="EDJS Spectacle" class="w-100">
+                  <img src="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" alt="L'École des jeunes spectateurs Spectacle" class="w-100">
                   <a href="assets/edjs img/Casse-Noisette_Web_013-1024x683.webp" class="popup-image gal-btn"><i
                                         class="fal fa-plus"></i></a>
                 </div>
