--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- EDJS Favicon -->
+  <!-- L'École des jeunes spectateurs Favicon -->
   <link rel="icon" type="image/png" href="assets/img/4x/edjs favicon_1@4x.png">
   <link rel="shortcut icon" href="assets/img/4x/edjs favicon_1@4x.png" type="image/png">
   <link rel="icon" href="assets/img/4x/edjs favicon_1@4x.png" type="image/png">
@@ -1514,7 +1514,7 @@
           <p style="font-size: 14px; margin-bottom: 10px; color: #666;">Connecter la culture au Maroc à travers des spectacles théâtraux pour écoles, associations, familles et partenaires.</p>
           <div style="margin-bottom: 8px;">
             <i class="fa-solid fa-envelope" style="color: #7e8a01; margin-right: 8px;"></i>
-            <a href="mailto:contact@edjs.ma" style="color: #333; text-decoration: none; font-size: 14px;">contact@edjs.ma</a>
+            <a href="mailto:contact@L'École des jeunes spectateurs.ma" style="color: #333; text-decoration: none; font-size: 14px;">contact@L'École des jeunes spectateurs.ma</a>
           </div>
           <div style="margin-bottom: 8px;">
             <i class="fa-solid fa-phone" style="color: #7e8a01; margin-right: 8px;"></i>
@@ -1533,7 +1533,7 @@
               <a href="tel:+212522123456" class="sidemenu-link">+212 522 123 456</a>
             </li>
             <li>
-              <a href="mailto:contact@edjs.ma" class="sidemenu-link">contact@edjs.ma</a>
+              <a href="mailto:contact@L'École des jeunes spectateurs.ma" class="sidemenu-link">contact@L'École des jeunes spectateurs.ma</a>
             </li>
             <li>
               <a href="/">Casablanca, Maroc</a>
@@ -1987,7 +1987,7 @@
                   <div class="vs-service__content" style="padding: 30px 25px;">
                     <div class="vs-service__header" style="margin-bottom: 20px;">
                       <span class="vs-service__icon" style="display: inline-flex; align-items: center; justify-content: center; width: 70px; height: 70px; background: linear-gradient(135deg, #BDCF00, #9BB800); border-radius: 50%; margin-bottom: 15px;">
-                      <img src="assets/img/icon edjs-07.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-07.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
                     </span>
                     </div>
                     <a class="vs-service__heading--link" href="service-details" style="text-decoration: none; color: inherit;">
@@ -2012,7 +2012,7 @@
                   <div class="vs-service__content" style="padding: 30px 25px;">
                     <div class="vs-service__header" style="margin-bottom: 20px;">
                       <span class="vs-service__icon" style="display: inline-flex; align-items: center; justify-content: center; width: 70px; height: 70px; background: linear-gradient(135deg, #BDCF00, #9BB800); border-radius: 50%; margin-bottom: 15px;">
-                      <img src="assets/img/icon edjs-04.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-04.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
                     </span>
                     </div>
                     <a class="vs-service__heading--link" href="service-details" style="text-decoration: none; color: inherit;">
@@ -2037,7 +2037,7 @@
                   <div class="vs-service__content" style="padding: 30px 25px;">
                     <div class="vs-service__header" style="margin-bottom: 20px;">
                       <span class="vs-service__icon" style="display: inline-flex; align-items: center; justify-content: center; width: 70px; height: 70px; background: linear-gradient(135deg, #BDCF00, #9BB800); border-radius: 50%; margin-bottom: 15px;">
-                      <img src="assets/img/icon edjs-05.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-05.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
                     </span>
                     </div>
                     <a class="vs-service__heading--link" href="associations" style="text-decoration: none; color: inherit;">
@@ -2062,7 +2062,7 @@
                   <div class="vs-service__content" style="padding: 30px 25px;">
                     <div class="vs-service__header" style="margin-bottom: 20px;">
                       <span class="vs-service__icon" style="display: inline-flex; align-items: center; justify-content: center; width: 70px; height: 70px; background: linear-gradient(135deg, #BDCF00, #9BB800); border-radius: 50%; margin-bottom: 15px;">
-                      <img src="assets/img/icon edjs-06.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-06.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
                     </span>
                     </div>
                     <a class="vs-service__heading--link" href="families" style="text-decoration: none; color: inherit;">
@@ -2087,7 +2087,7 @@
                   <div class="vs-service__content" style="padding: 30px 25px;">
                     <div class="vs-service__header" style="margin-bottom: 20px;">
                       <span class="vs-service__icon" style="display: inline-flex; align-items: center; justify-content: center; width: 70px; height: 70px; background: linear-gradient(135deg, #BDCF00, #9BB800); border-radius: 50%; margin-bottom: 15px;">
-                      <img src="assets/img/icon edjs-08.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-08.png" alt="service icon" style="width: 35px; height: 35px; filter: brightness(0) invert(1);">
                     </span>
                     </div>
                     <a class="vs-service__heading--link" href="partners" style="text-decoration: none; color: inherit;">
@@ -2190,7 +2190,7 @@
     
     <!-- About -->
     <section class="vs-about--section space space-extra-bottom z-index-common parallax-wrap overflow-hidden" style="background-color: #ffffff !important; background-image: none !important;">
-      <img src="assets/img/icon edjs-36.png" alt="EDJS Rocket" class="vs-about--ele1 rocket-animation" data-wow-delay="0.35s">
+      <img src="assets/img/icon L'École des jeunes spectateurs-36.png" alt="L'École des jeunes spectateurs Rocket" class="vs-about--ele1 rocket-animation" data-wow-delay="0.35s">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-30 wow animate__fadeInUp" data-wow-delay="0.25s">
@@ -2233,7 +2233,7 @@
       
       <!-- Large Logo at Bottom -->
       <div class="about-bottom-logo">
-        <img src="assets/img/Asset 3@4x.png" alt="EDJS Logo" class="bottom-logo" style="z-index: 5; position: relative;">
+        <img src="assets/img/Asset 3@4x.png" alt="L'École des jeunes spectateurs Logo" class="bottom-logo" style="z-index: 5; position: relative;">
       </div>
     </section>
     <!-- About End -->
@@ -2437,7 +2437,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Casse-Noisette" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color1">
-                        <img src="assets/img/icon edjs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
@@ -2464,7 +2464,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color2">
-                        <img src="assets/img/icon edjs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
@@ -2491,7 +2491,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color3">
-                        <img src="assets/img/icon edjs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
@@ -2518,7 +2518,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color4">
-                        <img src="assets/img/icon edjs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
@@ -2545,7 +2545,7 @@
                       <img class="vs-class__figure--img" src="assets/img/spectacles/simple.png" alt="Simple Comme Bonjour" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color5">
-                        <img src="assets/img/icon edjs-20.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-20.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
@@ -2572,7 +2572,7 @@
                       <img class="vs-class__figure--img" src="assets/img/4x/Asset 6@4x.png" alt="Gretel et Hansel" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color1">
-                        <img src="assets/img/icon edjs-21.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-21.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
@@ -2626,7 +2626,7 @@
                       <img class="vs-class__figure--img" src="assets/img/4x/Asset 8@4x.png" alt="Spectacle Musical" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                       <div class="vs-class__icon--wrap">
                         <span class="vs-class__icon vs-class__icon--color3">
-                        <img src="assets/img/icon edjs-23.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                        <img src="assets/img/icon L'École des jeunes spectateurs-23.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                       </span>
                       </div>
                     </a>
