--- a/partners.html
+++ b/partners.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Nos Partenaires - École des Jeunes Spectateurs | EDJS</title>
+  <title>Nos Partenaires - École des Jeunes Spectateurs | L'École des jeunes spectateurs</title>
   <meta name="author" content="École des Jeunes Spectateurs">
   <meta name="description" content="Découvrez nos partenaires qui nous accompagnent dans notre mission d'éducation artistique et culturelle pour les enfants.">
-  <meta name="keywords" content="partenaires, École des Jeunes Spectateurs, EDJS, théâtre, éducation, culture, enfants, collaboration">
+  <meta name="keywords" content="partenaires, École des Jeunes Spectateurs, L'École des jeunes spectateurs, théâtre, éducation, culture, enfants, collaboration">
   <meta name="robots" content="INDEX,FOLLOW">
 
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- EDJS Favicon -->
-  <link rel="icon" type="image/png" href="assets/img/4x/edjs%20favicon_1@4x.png">
-  <link rel="shortcut icon" href="assets/img/4x/edjs%20favicon_1@4x.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/img/4x/edjs%20favicon_1@4x.png">
+  <!-- L'École des jeunes spectateurs Favicon -->
+  <link rel="icon" type="image/png" href="assets/img/4x/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="shortcut icon" href="assets/img/4x/L'École des jeunes spectateurs%20favicon_1@4x.png" type="image/png">
+  <link rel="apple-touch-icon" href="assets/img/4x/L'École des jeunes spectateurs%20favicon_1@4x.png">
   <meta name="msapplication-TileColor" content="#BDCF00">
-  <meta name="msapplication-TileImage" content="assets/img/4x/edjs%20favicon_1@4x.png">
+  <meta name="msapplication-TileImage" content="assets/img/4x/L'École des jeunes spectateurs%20favicon_1@4x.png">
   <meta name="theme-color" content="#BDCF00">
   <!-- Social Media Featured Image -->
   <meta property="og:image" content="assets/img/4x/Asset%2011@4x.png">
@@ -262,7 +262,7 @@
         </svg>
       </div>
       <div class="preloader-logo">
-        <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 60px;">
+        <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 60px;">
       </div>
     </div>
   </div>
@@ -373,11 +373,11 @@
           </li>
         </ul>
         <div class="mobile-contact-info" style="padding: 20px; border-top: 1px solid #eee; margin-top: 20px;">
-          <h4 style="color: #7e8a01; margin-bottom: 15px; font-size: 16px;">EDJS - Culture Pour Tous</h4>
+          <h4 style="color: #7e8a01; margin-bottom: 15px; font-size: 16px;">L'École des jeunes spectateurs - Culture Pour Tous</h4>
           <p style="font-size: 14px; margin-bottom: 10px; color: #666;">Connecter la culture au Maroc à travers des spectacles théâtraux pour écoles, associations, familles et partenaires.</p>
           <div style="margin-bottom: 8px;">
             <i class="fa-solid fa-envelope" style="color: #7e8a01; margin-right: 8px;"></i>
-            <a href="mailto:contact@edjs.ma" style="color: #333; text-decoration: none; font-size: 14px;">contact@edjs.ma</a>
+            <a href="mailto:contact@L'École des jeunes spectateurs.ma" style="color: #333; text-decoration: none; font-size: 14px;">contact@L'École des jeunes spectateurs.ma</a>
           </div>
           <div style="margin-bottom: 8px;">
             <i class="fa-solid fa-phone" style="color: #7e8a01; margin-right: 8px;"></i>
@@ -479,7 +479,7 @@
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
     <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
-      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="L'École des jeunes spectateurs Background">
     </div>
     <div class="container">
       <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
@@ -683,11 +683,11 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-footer__logo-link">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
-                EDJS propose des spectacles théâtraux éducatifs et
+                L'École des jeunes spectateurs propose des spectacles théâtraux éducatifs et
                 des ateliers créatifs pour enfants.
               </p>
               <div class="icon-call justify-content-center justify-content-md-start pt-10 mb-10">
@@ -748,7 +748,7 @@
           <div class="col-md-auto">
             <p class="vs-footer__copyright mb-0">
               Copyright © <span id="currentYear"></span>
-              <a href="/">EDJS</a>. Tous droits réservés.
+              <a href="/">L'École des jeunes spectateurs</a>. Tous droits réservés.
             </p>
           </div>
           <div class="col-md-auto">
