--- a/registration.html
+++ b/registration.html
@@ -5,16 +5,16 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>
-    Inscription - École des Jeunes Spectateurs | EDJS
+    Inscription - École des Jeunes Spectateurs | L'École des jeunes spectateurs
   </title>
   <meta name="author" content="École des Jeunes Spectateurs">
   <meta name="description" content="Inscrivez-vous aux spectacles de l'École des Jeunes Spectateurs au Maroc">
-  <meta name="keywords" content="inscription, École des Jeunes Spectateurs, EDJS, spectacles, théâtre, enfants">
+  <meta name="keywords" content="inscription, École des Jeunes Spectateurs, L'École des jeunes spectateurs, spectacles, théâtre, enfants">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <!-- EDJS Favicon -->
+  <!-- L'École des jeunes spectateurs Favicon -->
   <link rel="icon" type="image/png" href="assets/img/4x/edjs favicon_1@4x.png">
   <link rel="shortcut icon" href="assets/img/4x/edjs favicon_1@4x.png" type="image/png">
   <link rel="apple-touch-icon" href="assets/img/4x/edjs favicon_1@4x.png">
@@ -87,7 +87,7 @@
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
     <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
-      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="L'École des jeunes spectateurs Background">
     </div>
     <div class="container">
       <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
