--- a/spectacles.html
+++ b/spectacles.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>EDJS - Spectacles | Programmation Culturelle pour Écoles et Familles</title>
-  <meta name="author" content="EDJS">
+  <title>L'École des jeunes spectateurs - Spectacles | Programmation Culturelle pour Écoles et Familles</title>
+  <meta name="author" content="L'École des jeunes spectateurs">
   <meta name="description" content="Découvrez notre programmation de spectacles culturels adaptés aux écoles, associations et familles. Réservez vos places pour des expériences théâtrales inoubliables.">
-  <meta name="keywords" content="spectacles EDJS, théâtre enfants, programmation culturelle, réservation spectacles Maroc">
+  <meta name="keywords" content="spectacles L'École des jeunes spectateurs, théâtre enfants, programmation culturelle, réservation spectacles Maroc">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/img/edjs%20favicon_1@4x.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/img/edjs%20favicon_1@4x.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/img/edjs%20favicon_1@4x.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/edjs%20favicon_1@4x.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/edjs%20favicon_1@4x.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/img/edjs%20favicon_1@4x.png">
-  <link rel="shortcut icon" href="assets/img/edjs%20favicon_1@4x.png" type="image/png">
-  <link rel="icon" href="assets/img/edjs%20favicon_1@4x.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png">
+  <link rel="shortcut icon" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png" type="image/png">
+  <link rel="icon" href="assets/img/L'École des jeunes spectateurs%20favicon_1@4x.png" type="image/png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
@@ -690,7 +690,7 @@
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <div class="mobile-logo">
-        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="max-height: 50px;"></a>
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="max-height: 50px;"></a>
         <button class="vs-menu-toggle">
           <i class="fa-solid fa-xmark"></i>
         </button>
@@ -801,7 +801,7 @@
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
     <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
-      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="L'École des jeunes spectateurs Background">
     </div>
     <div class="container">
       <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
@@ -1597,7 +1597,7 @@
                     <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color1">
-                      <img src="assets/img/icon edjs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-11.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                     </span>
                     </div>
                   </a>
@@ -1624,7 +1624,7 @@
                     <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color2">
-                      <img src="assets/img/icon edjs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-12.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                     </span>
                     </div>
                   </a>
@@ -1651,7 +1651,7 @@
                     <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color3">
-                      <img src="assets/img/icon edjs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-18.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                     </span>
                     </div>
                   </a>
@@ -1678,7 +1678,7 @@
                     <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color4">
-                      <img src="assets/img/icon edjs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
+                      <img src="assets/img/icon L'École des jeunes spectateurs-19.png" alt="Spectacle Icon" style="width: 35px; height: 35px;">
                     </span>
                     </div>
                   </a>
@@ -1972,7 +1972,7 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-footer__logo-link">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
