--- a/about.html
+++ b/about.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>À Propos - École des Jeunes Spectateurs | EDJS</title>
+  <title>À Propos - École des Jeunes Spectateurs | L'École des jeunes spectateurs</title>
   <meta name="author" content="École des Jeunes Spectateurs">
-  <meta name="description" content="Découvrez l'École des Jeunes Spectateurs (EDJS), notre mission d'éducation artistique et culturelle pour les enfants au Maroc. Plus de 10 ans d'expérience dans les spectacles éducatifs.">
-  <meta name="keywords" content="École des Jeunes Spectateurs, EDJS, éducation artistique, spectacles enfants, culture Maroc">
+  <meta name="description" content="Découvrez l'École des Jeunes Spectateurs (L'École des jeunes spectateurs), notre mission d'éducation artistique et culturelle pour les enfants au Maroc. Plus de 10 ans d'expérience dans les spectacles éducatifs.">
+  <meta name="keywords" content="École des Jeunes Spectateurs, L'École des jeunes spectateurs, éducation artistique, spectacles enfants, culture Maroc">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- EDJS Favicon -->
+  <!-- L'École des jeunes spectateurs Favicon -->
   <link rel="icon" type="image/png" href="assets/img/4x/edjs favicon_1@4x.png">
   <link rel="shortcut icon" href="assets/img/4x/edjs favicon_1@4x.png" type="image/png">
   <link rel="apple-touch-icon" href="assets/img/4x/edjs favicon_1@4x.png">
@@ -106,7 +106,7 @@
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <div class="mobile-logo">
-        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="EDJS" class="logo" style="height: 50px; width: auto;"></a>
+        <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 50px; width: auto;"></a>
         <button class="vs-menu-toggle">
           <i class="fa-solid fa-xmark"></i>
         </button>
@@ -563,11 +563,11 @@
   <div class="breadcrumb-wrapper z-index-common overflow-hidden">
     <div class="vs-balls vs-balls--screen" data-balls-top="-6px" data-balls-color="#ffffff" style="top: -6px;"></div>
     <div class="breadcrumb-wrapper__bg wow animate__fadeInUp" data-wow-delay="0.15s" data-vs-gsap-parallax-speed="2" data-vs-gsap-parallax-zoom>
-      <img src="assets/edjs img/bg-header-home-v2.webp" alt="EDJS Background">
+      <img src="assets/edjs img/bg-header-home-v2.webp" alt="L'École des jeunes spectateurs Background">
     </div>
     <div class="container">
       <div class="breadcrumb-wrapper__content wow animate__fadeInUp" data-wow-delay="0.45s">
-        <h1 class="breadcrumb-wrapper__title">À Propos d'EDJS</h1>
+        <h1 class="breadcrumb-wrapper__title">À Propos d'L'École des jeunes spectateurs</h1>
         <div class="breadcrumb-wrapper__menu--wrap">
           <ul class="breadcrumb-wrapper__menu">
             <li class="breadcrumb-wrapper__menu--item"><a href="/">Accueil</a></li>
@@ -584,7 +584,7 @@
         <div class="col-lg-8">
           <div class="vs-title title-anime animation-style2">
             <div class="title-anime__wrap">
-              <span class="vs-title__sub" style="color: #7e8a01;">À propos d'EDJS</span>
+              <span class="vs-title__sub" style="color: #7e8a01;">À propos d'L'École des jeunes spectateurs</span>
               <h2 class="vs-title__main">École du Jeune Spectateur</h2>
             </div>
           </div>
@@ -647,7 +647,7 @@
         <div class="col-lg-6 mb-5">
           <div class="about-image-wrapper wow animate__fadeInLeft" data-wow-delay="0.2s">
             <div class="main-image" style="position: relative; border-radius: 20px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.1);">
-              <img src="assets/edjs img/Casse-Noisette_Web_007.webp" alt="EDJS Spectacle" class="img-fluid" style="width: 100%; height: 400px; object-fit: cover;">
+              <img src="assets/edjs img/Casse-Noisette_Web_007.webp" alt="L'École des jeunes spectateurs Spectacle" class="img-fluid" style="width: 100%; height: 400px; object-fit: cover;">
               <div style="position: absolute; bottom: 20px; left: 20px; background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;">
                 <h5 style="margin: 0; color: #333; font-weight: 600;">Fondée par Nezha Belkady</h5>
                 <p style="margin: 5px 0 0 0; color: #666; font-size: 14px;">Directrice et Fondatrice</p>
@@ -816,7 +816,7 @@
             <div class="vs-title title-anime animation-style2">
               <div class="title-anime__wrap">
                 <h2 class="vs-title__main text-white">
-                  Nos Spectacles EDJS
+                  Nos Spectacles L'École des jeunes spectateurs
                 </h2>
               </div>
             </div>
@@ -851,7 +851,7 @@
               </h2>
             </div>
             <p class="vs-title__text text-capitalize fw-medium mb-0" style="color: white;">
-              EDJS ouvre ses portes pour offrir une éducation culturelle
+              L'École des jeunes spectateurs ouvre ses portes pour offrir une éducation culturelle
               de qualité. Notre objectif est de former avec soin.
             </p>
           </div>
@@ -924,7 +924,7 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-footer__logo-link">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
