--- a/blog-details.html
+++ b/blog-details.html
@@ -5,16 +5,16 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>
-    Article - École des Jeunes Spectateurs | EDJS
+    Article - École des Jeunes Spectateurs | L'École des jeunes spectateurs
   </title>
   <meta name="author" content="École des Jeunes Spectateurs">
   <meta name="description" content="Découvrez les articles et actualités de l'École des Jeunes Spectateurs au Maroc">
-  <meta name="keywords" content="École des Jeunes Spectateurs, EDJS, spectacles, théâtre, enfants, culture">
+  <meta name="keywords" content="École des Jeunes Spectateurs, L'École des jeunes spectateurs, spectacles, théâtre, enfants, culture">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- EDJS Favicon -->
+  <!-- L'École des jeunes spectateurs Favicon -->
   <link rel="icon" type="image/png" href="assets/img/4x/edjs favicon_1@4x.png">
   <link rel="shortcut icon" href="assets/img/4x/edjs favicon_1@4x.png" type="image/png">
   <link rel="apple-touch-icon" href="assets/img/4x/edjs favicon_1@4x.png">
@@ -932,10 +932,10 @@
           <div class="col-lg-4 col-md-6 wow animate__fadeInUp" data-wow-delay="0.25s">
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
-                <a href="/"><img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;"></a>
+                <a href="/"><img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;"></a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
-                EDJS propose des spectacles théâtraux éducatifs et
+                L'École des jeunes spectateurs propose des spectacles théâtraux éducatifs et
                 des ateliers créatifs pour enfants.
               </p>
               <div class="icon-call justify-content-center justify-content-md-start pt-10 mb-10">
@@ -1008,7 +1008,7 @@
           <div class="col-md-auto">
             <p class="vs-footer__copyright mb-0" style="color: #999999;">
               Copyright &copy; <span id="currentYear"></span>
-              <a href="/">EDJS</a>. Tous droits réservés.
+              <a href="/">L'École des jeunes spectateurs</a>. Tous droits réservés.
             </p>
           </div>
           <div class="col-md-auto">
