--- a/spectacle-casse-noisette.html
+++ b/spectacle-casse-noisette.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Casse-Noisette - École du Jeune Spectateur</title>
-  <meta name="author" content="EDJS">
+  <meta name="author" content="L'École des jeunes spectateurs">
   <meta name="description" content="Un voyage magique dans l'univers du ballet classique de Tchaïkovski, adapté pour les jeunes spectateurs avec des costumes somptueux et une chorégraphie captivante.">
-  <meta name="keywords" content="ballet, casse-noisette, spectacle, enfants, théâtre, EDJS">
+  <meta name="keywords" content="ballet, casse-noisette, spectacle, enfants, théâtre, L'École des jeunes spectateurs">
   <meta name="robots" content="INDEX,FOLLOW">
 
   <!-- Mobile Specific Metas -->
@@ -291,7 +291,7 @@
           <div class="vs-hero-content text-white">
             <div class="hero-badge" style="background: rgba(255,255,255,0.2); color: white; padding: 8px 20px; border-radius: 25px; font-size: 0.9rem; font-weight: 600; display: inline-flex; align-items: center; gap: 8px; margin-bottom: 20px;">
               <i class="fas fa-theater-masks"></i>
-              Spectacle EDJS
+              Spectacle L'École des jeunes spectateurs
             </div>
             <h1 class="vs-hero-title" style="font-size: 4rem; font-weight: 700; margin-bottom: 25px; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">
               Casse-<span style="color: #BDCF00;">Noisette</span>
@@ -548,11 +548,11 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-footer__logo-link">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important; filter: brightness(0) invert(1);">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important; filter: brightness(0) invert(1);">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
-                EDJS propose des spectacles théâtraux éducatifs et
+                L'École des jeunes spectateurs propose des spectacles théâtraux éducatifs et
                 des ateliers créatifs pour enfants.
               </p>
               <div class="icon-call justify-content-center justify-content-md-start pt-10 mb-10">
@@ -610,7 +610,7 @@
           <div class="col-md-auto">
             <p class="vs-footer__copyright mb-0" style="color: #999999;">
               Copyright &copy; <span id="currentYear"></span>
-              <a href="/">EDJS</a>. Tous droits réservés.
+              <a href="/">L'École des jeunes spectateurs</a>. Tous droits réservés.
             </p>
           </div>
           <div class="col-md-auto">
