--- a/spectacle-estevanico.html
+++ b/spectacle-estevanico.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Estevanico - École du Jeune Spectateur</title>
-  <meta name="author" content="EDJS">
+  <meta name="author" content="L'École des jeunes spectateurs">
   <meta name="description" content="L'histoire extraordinaire de Mustapha d'Azzemour dit Esteban le noir, découvreur des cités d'or. Premier africain connu à mettre les pieds sur le nouveau monde.">
-  <meta name="keywords" content="estevanico, histoire, maroc, aventure, spectacle, enfants, théâtre, EDJS, azzemour">
+  <meta name="keywords" content="estevanico, histoire, maroc, aventure, spectacle, enfants, théâtre, L'École des jeunes spectateurs, azzemour">
   <meta name="robots" content="INDEX,FOLLOW">
 
   <!-- Mobile Specific Metas -->
@@ -893,11 +893,11 @@
             <div class="vs-footer__widget">
               <div class="vs-footer__logo text-center text-md-start mb-25">
                 <a href="/" class="vs-logo">
-                  <img src="assets/img/Asset 2@4x.png" alt="EDJS" style="height: 120px; width: auto; max-width: none !important;">
+                  <img src="assets/img/Asset 2@4x.png" alt="L'École des jeunes spectateurs" style="height: 120px; width: auto; max-width: none !important;">
                 </a>
               </div>
               <p class="vs-footer__desc text-center text-md-start" style="color: #999999;">
-                EDJS propose des spectacles théâtraux éducatifs et
+                L'École des jeunes spectateurs propose des spectacles théâtraux éducatifs et
                 des ateliers créatifs pour enfants.
               </p>
               <div class="icon-call justify-content-center justify-content-md-start pt-10 mb-10">
@@ -970,7 +970,7 @@
           <div class="col-md-auto">
             <p class="vs-footer__copyright mb-0" style="color: #999999;">
               Copyright © <span id="currentYear"></span>
-              <a href="/">EDJS</a>. Tous droits réservés.
+              <a href="/">L'École des jeunes spectateurs</a>. Tous droits réservés.
             </p>
           </div>
           <div class="col-md-auto">
